--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>مركز الامتحان - بريد الجزائر</title>
   <style>
     body {
@@ -277,3 +278,4 @@ let currentQuestion = 0;
   </script>
 </body>
 </html>
+
